# mock-backend

./: .gitignore  compose.yaml  main.py  pyproject.toml  test.json
config/: config.yaml
src/: main.py  test.py
src/api/dependencies/: resources.py
src/api/middlewares/: cor_id.py  metric.py  trace.py
src/api/models/: chat.py  exercise.py  lesson.py  resources.py  share.py  user.py
src/api/routers/: __init__.py  auth.py  chat.py  exercise.py  lesson.py  resources.py  user.py
src/app/: chat.py  generate_lesson.py  grade_lesson.py  statistics.py  upload_lesson.py  utils.py
src/domain/agents/: chat.py  create_listening.py  create_reading.py  create_speaking.py  listening_grader.py  reading_grader.py  speaking.py
src/domain/assistants/: agent.py  conversation_storage.py  models.py  promts.py  runners.py
src/infra/: gemini.py
src/infra/data/: crud.py  models.py  schema.py
src/infra/db/: postgre.py
src/infra/minio/: __init__.py
src/log/: __init__.py
src/settings/: __init__.py  auth.py  gemini.py  minio.py  postgre.py  rabbit.py
workers/: Dockerfile  main.py  models.py  pyproject.toml  utils.py
