[project]
name = "infra-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coqui-tts>=0.24.3",
    "fastapi[standard]>=0.115.12",
    "faster-whisper",
    "logfire>=3.15.0",
]

[tool.uv.sources]
faster-whisper = { git = "https://github.com/SYSTRAN/faster-whisper" }
